--- a/FE/index.html
+++ b/FE/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo-2.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>추억방울</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo-2.svg" />
+
+  <!-- PWA 관련 메타 태그 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="description" content="추억방울 - 소중한 추억을 보관하세요" />
+
+  <!-- iOS용 아이콘 -->
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+  <title>추억방울</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
